--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -52,13 +52,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\SDL_image-1.2.12\include;C:\SDL_mixer-1.2.12\include;C:\SDL_ttf-2.0.11\include;C:\SDL-1.2.15\include;C:\Users\Michael\Documents\code\cpp\library\sdlOOP\sdlOOP;C:\boost_1_53_0\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\SDL_image-1.2.12\include;C:\SDL_mixer-1.2.12\include;C:\SDL_ttf-2.0.11\include;C:\SDL-1.2.15\include;C:\Users\Michael\Documents\code\cpp\library\sdlOOP\sdlOOP;C:\boost_1_53_0\;C:\Users\Michael\Documents\code\cpp\library\winapi-library;C:\Users\Michael\Documents\code\cpp\library\TestTracker;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\SDL_image-1.2.12\lib\x86;C:\SDL_mixer-1.2.12\lib\x86;C:\SDL_ttf-2.0.11\lib\x86;C:\SDL-1.2.15\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL.lib;SDLmain.lib;SDL_image.lib;SDL_ttf.lib;SDL_mixer.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\SDL_image-1.2.12\lib\x86;C:\SDL_mixer-1.2.12\lib\x86;C:\SDL_ttf-2.0.11\lib\x86;C:\SDL-1.2.15\lib\x86;C:\Users\Michael\Documents\code\cpp\library\winapi-library\UnicodeDebug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL.lib;SDLmain.lib;SDL_image.lib;SDL_ttf.lib;SDL_mixer.lib;winapi_MDdu.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -79,18 +79,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="2DMath.cpp" />
-    <ClCompile Include="Console.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="TestTracker.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="2DMath.h" />
-    <ClInclude Include="adams_macros.h" />
-    <ClInclude Include="Console.h" />
-    <ClInclude Include="Prerequisites.h" />
-    <ClInclude Include="TestTracker.h" />
-    <ClInclude Include="winapi_DataConversion.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
